# NexusGameLauncher

./: .gitignore  Cargo.toml  README.md  build.rs
src/: main.rs  utils.rs
ui/: main_window.slint  settings_frame.slint
ui/compoment/: button_ex.slint  icon_button.slint  tab_ex.slint
ui/frames/: borderless-window.slint  client-frame.slint
