[package]
name = "NexusLaunch"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
slint = { version = "1.5.0", features = ["backend-winit", "renderer-femtovg"] }
anyhow = "1"
winit = { version = "0.30.9", features = ["rwh_06"] }
i-slint-backend-winit = "1.5.1"
webbrowser = "1.0.4"

[build-dependencies]
slint-build = "1.5.0"
embed-resource = "3.0.2"
image = "0.25.5"      # 或最新版
ico = "0.4.0"         # 或最新版
winres = "0.1.12"

[profile.release]
opt-level = "z"  # 极限优化，减小体积
strip = true  # 去除符号表
lto = true  # 启用 Link-Time Optimization
codegen-units = 1  # 降低并行优化，提升最终代码质量
panic = "abort"  # 禁用 unwinding，减少代码体积
